# jajaman_ws

./: README.md  centerline.csv  centerlinefinal0607_100.csv  centerlinefinal0607_150.csv  e_stop.py  general_centerline.csv  manual_direct_control.py  manual_indirect_control.py  manual_indirect_full_brake.py  original_general_centerline.csv  plot_map.py  reverse_csv.py  ros_msg_parser_template.cpp  shortcut_centerline.csv  spline.py
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/any_map_visualizer/: centerline_10_visualizer_node  centerline_visualizer_node  inner_wall_visualizer_node  outer_wall_visualizer_node
devel/lib/any_point_visualizer/: any_point_visualizer_node
devel/lib/centerline_projector/: centerline_projector_node
devel/lib/joy/: joy_node
map_data/: map_data.pgm  map_data.yaml
midterm_script/: Emergency_Braking_lab.py
midterm_script/final/: Wall_following_lab.py  go_back.py
midterm_script/versions/: Wall_following_lab_1.py
script/: ref_gap_follow_lab.py
script/final/: gap_follow_lab.py
src/: manual_indirect_control.py
src/any_map_visualizer/: CMakeLists.txt  package.xml
src/any_map_visualizer/src/: centerline_10_visualizer.cpp  centerline_visualizer.cpp  inner_wall_visualizer.cpp  outer_wall_visualizer.cpp
src/any_point_visualizer/: CMakeLists.txt  package.xml
src/centerline_projector/: CMakeLists.txt  package.xml
src/centerline_projector/include/centerline_projector/: centerline_projector_node.hpp
src/centerline_projector/src/: centerline_projector_node.cpp  csv_reader.cpp
src/centerline_projector_xy/: CMakeLists.txt
src/csv_files/: 0.5_modified3_centerline.csv  general_inner_wall.csv  inner_wall.csv  modified_centerline_2.csv  outer_wall.csv  reverse_csv.py
src/curvature_calculator/: CMakeLists.txt  package.xml
src/debug_speed_decider/: CMakeLists.txt  package.xml
src/final_race/: CMakeLists.txt  package.xml
src/final_race/launch/: final_race.launch
src/lidar_to_global/: lidar_to_global.cpp
src/our_odom/: CMakeLists.txt
src/pure_pursuit/: CMakeLists.txt
src/pure_pursuit/include/pure_pursuit/: load_centerline_from_csv.hpp  lookahead_point_generator.hpp
src/pure_pursuit/src/: load_centerline_from_csv.cpp  lookahead_point_generator.cpp  projected_point_publisher.cpp  pure_pursuit.cpp
src/speed_decider/: CMakeLists.txt  package.xml
src/speed_decider_ttc/: CMakeLists.txt
src/test/: package.xml
src/test_cp/: CMakeLists.txt  map_data1-centerline.csv
src/vesc_commander/: CMakeLists.txt
(+75 files in other folders)
