<?xml version="1.0"?>
<package format="2">
  <name>any_map_visualizer</name>
  <version>0.0.0</version>
  <description>The any_map_visualizer package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
  </export>
</package>
